--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,23 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+/* width */
+::-webkit-scrollbar {
+    width: 7px;
+    background:#171717 ;
+  }
+  
 
-* {
-  box-sizing: border-box;
-}
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #313135; 
+    border-radius: 30px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #6C6C76; 
+    transition: all 0.5s linear;
+  }
